--- a/projects/amen/views/mapping/location/index.html
+++ b/projects/amen/views/mapping/location/index.html
@@ -54,24 +54,12 @@
             <form id="yale-medical-center-location">
               <fieldset class="toggle checklist">
                 <!-- <legend>Location</legend> -->
-                <label for='yale-medical-center-location-location-id'>Location ID<input type='checkbox'
-                    id='yale-medical-center-location-location-id' class='toggle'
-                    name='yale-medical-center-location-location-id' title='Location ID' value='Location ID'></label>
-                <label for='yale-medical-center-location-type'>Type<input type='checkbox'
-                    id='yale-medical-center-location-type' class='toggle' name='yale-medical-center-location-type'
+                <label for='yale-medical-center-location-location-id'>Location ID<input type='checkbox' id='yale-medical-center-location-location-id' class='toggle' name='yale-medical-center-location-location-id' title='Location ID' value='Location ID'></label>
+                <label for='yale-medical-center-location-type'>Type<input type='checkbox' id='yale-medical-center-location-type' class='toggle' name='yale-medical-center-location-type'
                     title='Type' value='Type'></label>
-                <label for='yale-medical-center-location-logical-grouping'>Logical grouping (department, unit,
-                  POD)<input type='checkbox' id='yale-medical-center-location-logical-grouping' class='toggle'
-                    name='yale-medical-center-location-logical-grouping'
-                    title='Logical grouping (department, unit, POD)'
-                    value='Logical grouping (department, unit, POD)'></label>
-                <label for='yale-medical-center-location-parent-location'>Parent Location<input type='checkbox'
-                    id='yale-medical-center-location-parent-location' class='toggle'
-                    name='yale-medical-center-location-parent-location' title='Parent Location'
-                    value='Parent Location'></label>
-                <label for='yale-medical-center-location-description'>Description<input type='checkbox'
-                    id='yale-medical-center-location-description' class='toggle'
-                    name='yale-medical-center-location-description' title='Description' value='Description' checked></label>
+                <label for='yale-medical-center-location-logical-grouping'>Logical Grouping<input type='checkbox' id='yale-medical-center-location-logical-grouping' class='toggle' name='yale-medical-center-location-logical-grouping' title='Logical Grouping' value='Logical Grouping'></label>
+                <label for='yale-medical-center-location-parent-location'>Parent Location<input type='checkbox' id='yale-medical-center-location-parent-location' class='toggle' name='yale-medical-center-location-parent-location' title='Parent Location' value='Parent Location'></label>
+                <label for='yale-medical-center-location-description'>Description<input type='checkbox' id='yale-medical-center-location-description' class='toggle' name='yale-medical-center-location-description' title='Description' value='Description' checked></label>
               </fieldset>
             </form>
             <div class="button-group right">
