--- a/projects/amen/style/_scss/_mapping.scss
+++ b/projects/amen/style/_scss/_mapping.scss
@@ -99,3 +99,76 @@
     }
   }
 }
+
+
+// CARD MAPPING GROUPS
+.card.mapping-group {
+  width: auto;
+
+  form {
+    margin-left: calc($spacing-16 * (-1));
+
+    .group {
+      display: flex;
+      flex-direction: column;
+      position: relative;
+      width: calc(100% - $spacing-16);
+      margin: 0 $spacing-8;
+      padding: 0 0 $spacing-16;
+
+      &:after {
+        display: block;
+        position: absolute;
+        bottom: 0;
+        left: $spacing-8;
+        width: 100%;
+        height: 1px;
+        margin-bottom: $spacing-8;
+        background-color: $color--border;
+        content: "";
+      }
+
+      fieldset {
+        width: 100%;
+
+        &.small {
+          width: 50%;
+        }
+      }
+
+      fieldset+fieldset {
+        margin-top: 0;
+      }
+    }
+  }
+}
+
+@media (min-width: 40rem) {
+  .card.card.mapping-group {
+    form {
+      .group {
+        width: calc((100% / 2) - $spacing-16);
+      }
+    }
+  }
+}
+
+@media (min-width: 80rem) {
+  .card.card.mapping-group {
+    form {
+      .group {
+        width: calc((100% / 3) - $spacing-16);
+      }
+    }
+  }
+}
+
+@media (min-width: 90rem) {
+  .card.card.mapping-group {
+    form {
+      .group {
+        width: calc((100% / 4) - $spacing-16);
+      }
+    }
+  }
+}
