--- a/projects/amen/views/mapping/entities/index.html
+++ b/projects/amen/views/mapping/entities/index.html
@@ -46,7 +46,7 @@
         <h2>Edit Active Entities</h2>
         <div class="row cards">
           <div class="card">
-            <h3>Control Entities</h3>
+            <h3 class="visuallyhidden">Control Entities</h3>
             <!-- <div class="button-group right">
               <button class="tertiary">All</button>
               <button class="tertiary">None</button>
