--- a/style/_scss/_inputs.scss
+++ b/style/_scss/_inputs.scss
@@ -148,7 +148,7 @@ select {
   width: 100%;
   min-height: 3rem;
   margin: 0;
-  padding: $spacing-8;
+  padding: $spacing-8 2.5rem $spacing-8 $spacing-8;
   border: 1px solid $color--border;
   border-radius: $border-radius-sm;
 
