--- a/projects/amen/style/_scss/_mapping.scss
+++ b/projects/amen/style/_scss/_mapping.scss
@@ -101,60 +101,92 @@
 }
 
 
-// CARD MAPPING GROUPS
-.card.mapping-group {
-  width: auto;
-
+// CARD MAPPING GROUP - ROWS
+.card.mapping-group.row {
   form {
-    margin-left: calc($spacing-16 * (-1));
+    flex-direction: row;
 
     .group {
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-between;
       position: relative;
-      width: calc(100% - $spacing-16);
+      width: 100%;
       margin: 0 $spacing-8;
-      padding: 0 0 $spacing-16;
+      padding: 0 0 $spacing-32;
 
       &:after {
         display: block;
         position: absolute;
         bottom: 0;
-        left: $spacing-8;
+        left: 0;
         width: 100%;
         height: 1px;
-        margin-bottom: $spacing-8;
+        margin-bottom: $spacing-16;
         background-color: $color--border;
         content: "";
       }
 
+      &:last-of-type {
+        padding: 0;
+
+        &:after {
+          display: none;
+        }
+      }
+
       fieldset {
         width: 100%;
+        margin: $spacing-8 0;
 
         &.small {
-          width: 50%;
+          width: calc(50% - $spacing-16);
         }
       }
 
       fieldset+fieldset {
         margin-top: 0;
       }
+
+      fieldset.small+fieldset.small {
+        &:before {
+          display: block;
+          position: absolute;
+          top: 50%;
+          left: calc($spacing-24 * (-1));
+          width: $spacing-16;
+          height: $spacing-16;
+          background-image: url(../assets/icons/ui/plus-mapping.svg);
+          background-size: contain;
+          content: "";
+        }
+      }
     }
   }
 }
 
 @media (min-width: 40rem) {
-  .card.card.mapping-group {
+  .card.mapping-group.row {
     form {
       .group {
         width: calc((100% / 2) - $spacing-16);
+
+        &:last-of-type {
+          padding: 0 0 $spacing-32;
+          ;
+
+          &:after {
+            display: block;
+          }
+        }
       }
     }
   }
 }
 
 @media (min-width: 80rem) {
-  .card.card.mapping-group {
+  .card.mapping-group.row {
     form {
       .group {
         width: calc((100% / 3) - $spacing-16);
@@ -164,10 +196,78 @@
 }
 
 @media (min-width: 90rem) {
-  .card.card.mapping-group {
+  .card.mapping-group.row {
     form {
       .group {
         width: calc((100% / 4) - $spacing-16);
+      }
+    }
+  }
+}
+
+// CARD MAPPING GROUPS - COLUMNS
+.card.mapping-group.column {
+
+  form {
+    flex-direction: column;
+    width: 100%;
+    margin: 0;
+
+    .group {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      position: relative;
+      width: 100%;
+      margin: 0;
+      padding: 0 0 $spacing-32;
+
+      &:after {
+        display: block;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        margin-bottom: $spacing-16;
+        background-color: $color--border;
+        content: "";
+      }
+
+      &:last-of-type {
+        padding: 0;
+
+        &:after {
+          display: none;
+        }
+      }
+
+      fieldset {
+        width: 100%;
+        margin: $spacing-8 0;
+
+        &.small {
+          width: calc(50% - $spacing-16);
+        }
+      }
+
+      fieldset+fieldset {
+        margin-top: 0;
+      }
+
+      fieldset.small+fieldset.small {
+        &:before {
+          display: block;
+          position: absolute;
+          top: 50%;
+          left: calc($spacing-24 * (-1));
+          width: $spacing-16;
+          height: $spacing-16;
+          background-image: url(../assets/icons/ui/plus-mapping.svg);
+          background-size: contain;
+          content: "";
+        }
       }
     }
   }
