--- a/projects/amen/views/mapping/index.html
+++ b/projects/amen/views/mapping/index.html
@@ -51,7 +51,7 @@
         <div class="row cards align-start">
           <div class="card column-12">
             <!-- <h3>Mapping and Transformation</h3> -->
-            <h4>Patient<span class="utility"><a href="views/mapping/patient/index.html" class="button tertiary">Add Fields</a></span></h4>
+            <h4>Patient<span class="utility"><a href="views/mapping/patient/index.html" class="button tertiary">Edit Fields</a></span></h4>
             <ul class="mapping">
               <li>
                 <span class="field">Field</span>
@@ -69,7 +69,7 @@
                 <span class="preview">TOM</span>
               </li>
             </ul>
-            <h4>Location<span class="utility"><a href="views/mapping/location/index.html" class="button tertiary">Add Fields</a></span></h4>
+            <h4>Location<span class="utility"><a href="views/mapping/location/index.html" class="button tertiary">Edit Fields</a></span></h4>
             <ul class="mapping">
               <li>
                 <span class="field">Field</span>
@@ -82,7 +82,7 @@
                 <span class="preview">ICU^101^A</span>
               </li>
             </ul>
-            <h4>Lab Result<span class="utility"><a href="views/mapping/lab-result/index.html" class="button tertiary">Add Fields</a></span></h4>
+            <h4>Lab Result<span class="utility"><a href="views/mapping/lab-result/index.html" class="button tertiary">Edit Fields</a></span></h4>
             <ul class="mapping">
               <li>
                 <span class="field">Field</span>
