--- a/projects/amen/views/mapping/location/index.html
+++ b/projects/amen/views/mapping/location/index.html
@@ -45,22 +45,164 @@
       <section>
         <h2>Edit Active Fields</h2>
         <div class="row cards">
-          <div class="card">
-            <h3>Control Fields</h3>
-            <!-- <div class="button-group right">
-              <button class="tertiary">All</button>
-              <button class="tertiary">None</button>
-            </div> -->
+          <div class="card mapping-group">
+            <h3 class="visuallyhidden">Control Fields</h3>
             <form id="yale-medical-center-location">
-              <fieldset class="toggle checklist">
-                <!-- <legend>Location</legend> -->
-                <label for='yale-medical-center-location-location-id'>Location ID<input type='checkbox' id='yale-medical-center-location-location-id' class='toggle' name='yale-medical-center-location-location-id' title='Location ID' value='Location ID'></label>
-                <label for='yale-medical-center-location-type'>Type<input type='checkbox' id='yale-medical-center-location-type' class='toggle' name='yale-medical-center-location-type'
-                    title='Type' value='Type'></label>
-                <label for='yale-medical-center-location-logical-grouping'>Logical Grouping<input type='checkbox' id='yale-medical-center-location-logical-grouping' class='toggle' name='yale-medical-center-location-logical-grouping' title='Logical Grouping' value='Logical Grouping'></label>
-                <label for='yale-medical-center-location-parent-location'>Parent Location<input type='checkbox' id='yale-medical-center-location-parent-location' class='toggle' name='yale-medical-center-location-parent-location' title='Parent Location' value='Parent Location'></label>
-                <label for='yale-medical-center-location-description'>Description<input type='checkbox' id='yale-medical-center-location-description' class='toggle' name='yale-medical-center-location-description' title='Description' value='Description' checked></label>
-              </fieldset>
+              <div class="group">
+                <fieldset class="toggle checklist">
+                  <label for='yale-medical-center-location-location-id'>Location ID<input type='checkbox' id='yale-medical-center-location-location-id' class='toggle' name='yale-medical-center-location-location-id' title='Location ID' value='Location ID'></label>
+                </fieldset>
+                <fieldset>
+                  <label for="yale-medical-center-location-location-id-select">Location ID Element</label>
+                  <select id="yale-medical-center-location-location-id-select" name="yale-medical-center-location-location-id-select" disabled>
+                    <option label='Select an element' value='Select an element'></option>
+                    <option label='PV-1-Set ID' value='PV-1-Set ID' selected></option>
+                    <option label='PV-2-Patient Class' value='PV-2-Patient Class'></option>
+                    <option label='PV-3-Assigned Patient Location' value='PV-3-Assigned Patient Location'></option>
+                    <option label='PV-4-Admission Type' value='PV-4-Admission Type'></option>
+                    <option label='PV-5-Preadmit Number' value='PV-5-Preadmit Number'></option>
+                    <option label='PV-6-Prior Patient Location' value='PV-6-Prior Patient Location'></option>
+                    <option label='PV-7-Attending Doctor' value='PV-7-Attending Doctor'></option>
+                    <option label='PV-8-Referring Doctor' value='PV-8-Referring Doctor'></option>
+                    <option label='PV-9-Consulting Doctor' value='PV-9-Consulting Doctor'></option>
+                    <option label='PV-10-Hospital Service' value='PV-10-Hospital Service'></option>
+                    <option label='PV-11-Temporary Location' value='PV-11-Temporary Location'></option>
+                    <option label='PV-12-Preadmit Test Indicator' value='PV-12-Preadmit Test Indicator'></option>
+                    <option label='PV-13-Re-admission Indicator' value='PV-13-Re-admission Indicator'></option>
+                    <option label='PV-14-Admit Source' value='PV-14-Admit Source'></option>
+                    <option label='PV-15-Ambulatory Status' value='PV-15-Ambulatory Status'></option>
+                    <option label='PV-16-VIP Indicator' value='PV-16-VIP Indicator'></option>
+                    <option label='PV-17- Admitting Doctor' value='PV-17- Admitting Doctor'></option>
+                    <option label='PV-18-Patient Type' value='PV-18-Patient Type'></option>
+                    <option label='PV-19-Visit Number' value='PV-19-Visit Number'></option>
+                  </select>
+                  <span class="select-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-chevron-down">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <path d="M6 9l6 6l6 -6"></path>
+                    </svg>
+                  </span>
+                </fieldset>
+              </div>
+              <div class="group">
+                <fieldset class="toggle checklist">
+                  <label for='yale-medical-center-location-type'>Type<input type='checkbox' id='yale-medical-center-location-type' class='toggle' name='yale-medical-center-location-type' title='Type' value='Type'></label>
+                </fieldset>
+                <fieldset>
+                  <label for="yale-medical-center-location-type-select">Location Type Element</label>
+                  <select id="yale-medical-center-location-type-select" name="yale-medical-center-location-type-select" disabled>
+                    <option label='Select an element' value='Select an element'></option>
+                    <option label="Facility" value="Facility"></option>
+                    <option label="Building" value="Building"></option>
+                    <option label="Floor" value="Floor"></option>
+                    <option label="Room" value="Room"></option>
+                    <option label="Bed" value="Bed"></option>
+                  </select>
+                  <span class="select-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-chevron-down">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <path d="M6 9l6 6l6 -6"></path>
+                    </svg>
+                  </span>
+                </fieldset>
+              </div>
+              <div class="group">
+                <fieldset class="toggle checklist">
+                  <label for='yale-medical-center-location-logical-grouping'>Logical Grouping<input type='checkbox' id='yale-medical-center-location-logical-grouping' class='toggle' name='yale-medical-center-location-logical-grouping' title='Logical Grouping' value='Logical Grouping'></label>
+                </fieldset>
+                <fieldset>
+                  <label for="yale-medical-center-location-logical-grouping-select">Logical Grouping Element</label>
+                  <select id="yale-medical-center-location-logical-grouping-select" name="yale-medical-center-location-logical-grouping-select" disabled>
+                    <option label='Select an element' value='Select an element'></option>
+                    <option label="Department" value="Department"></option>
+                    <option label="Unit" value="Unit"></option>
+                    <option label="POD" value="POD"></option>
+                  </select>
+                  <span class="select-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-chevron-down">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <path d="M6 9l6 6l6 -6"></path>
+                    </svg>
+                  </span>
+                </fieldset>
+              </div>
+              <div class="group">
+                <fieldset class="toggle checklist">
+                  <label for='yale-medical-center-location-parent-location'>Parent Location<input type='checkbox' id='yale-medical-center-location-parent-location' class='toggle' name='yale-medical-center-location-parent-location' title='Parent Location' value='Parent Location'></label>
+                </fieldset>
+                <fieldset>
+                  <label for="yale-medical-center-location-parent-location-select">Parent Location Element</label>
+                  <select id="yale-medical-center-location-parent-location-select" name="yale-medical-center-location-parent-location-select" disabled>
+                    <option label='Select an element' value='Select an element'></option>
+                    <option label='PV-1-Set ID' value='PV-1-Set ID'></option>
+                    <option label='PV-2-Patient Class' value='PV-2-Patient Class'></option>
+                    <option label='PV-3-Assigned Patient Location' value='PV-3-Assigned Patient Location'></option>
+                    <option label='PV-4-Admission Type' value='PV-4-Admission Type'></option>
+                    <option label='PV-5-Preadmit Number' value='PV-5-Preadmit Number'></option>
+                    <option label='PV-6-Prior Patient Location' value='PV-6-Prior Patient Location'></option>
+                    <option label='PV-7-Attending Doctor' value='PV-7-Attending Doctor'></option>
+                    <option label='PV-8-Referring Doctor' value='PV-8-Referring Doctor'></option>
+                    <option label='PV-9-Consulting Doctor' value='PV-9-Consulting Doctor'></option>
+                    <option label='PV-10-Hospital Service' value='PV-10-Hospital Service'></option>
+                    <option label='PV-11-Temporary Location' value='PV-11-Temporary Location'></option>
+                    <option label='PV-12-Preadmit Test Indicator' value='PV-12-Preadmit Test Indicator'></option>
+                    <option label='PV-13-Re-admission Indicator' value='PV-13-Re-admission Indicator'></option>
+                    <option label='PV-14-Admit Source' value='PV-14-Admit Source'></option>
+                    <option label='PV-15-Ambulatory Status' value='PV-15-Ambulatory Status'></option>
+                    <option label='PV-16-VIP Indicator' value='PV-16-VIP Indicator'></option>
+                    <option label='PV-17- Admitting Doctor' value='PV-17- Admitting Doctor'></option>
+                    <option label='PV-18-Patient Type' value='PV-18-Patient Type'></option>
+                    <option label='PV-19-Visit Number' value='PV-19-Visit Number'></option>
+                  </select>
+                  <span class="select-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-chevron-down">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <path d="M6 9l6 6l6 -6"></path>
+                    </svg>
+                  </span>
+                </fieldset>
+              </div>
+              <div class="group">
+                <fieldset class="toggle checklist">
+                  <label for='yale-medical-center-location-description'>Description<input type='checkbox' id='yale-medical-center-location-description' class='toggle' name='yale-medical-center-location-description' title='Description' value='Description' checked></label>
+                </fieldset>
+                <fieldset>
+                  <label for="yale-medical-center-location-description-select">Description Element</label>
+                  <select id="yale-medical-center-location-description-select" name="yale-medical-center-location-description-select">
+                    <option label='PV-1-Set ID' value='PV-1-Set ID'></option>
+                    <option label='PV-2-Patient Class' value='PV-2-Patient Class'></option>
+                    <option label='PV-3-Assigned Patient Location' value='PV-3-Assigned Patient Location' selected></option>
+                    <option label='PV-4-Admission Type' value='PV-4-Admission Type'></option>
+                    <option label='PV-5-Preadmit Number' value='PV-5-Preadmit Number'></option>
+                    <option label='PV-6-Prior Patient Location' value='PV-6-Prior Patient Location'></option>
+                    <option label='PV-7-Attending Doctor' value='PV-7-Attending Doctor'></option>
+                    <option label='PV-8-Referring Doctor' value='PV-8-Referring Doctor'></option>
+                    <option label='PV-9-Consulting Doctor' value='PV-9-Consulting Doctor'></option>
+                    <option label='PV-10-Hospital Service' value='PV-10-Hospital Service'></option>
+                    <option label='PV-11-Temporary Location' value='PV-11-Temporary Location'></option>
+                    <option label='PV-12-Preadmit Test Indicator' value='PV-12-Preadmit Test Indicator'></option>
+                    <option label='PV-13-Re-admission Indicator' value='PV-13-Re-admission Indicator'></option>
+                    <option label='PV-14-Admit Source' value='PV-14-Admit Source'></option>
+                    <option label='PV-15-Ambulatory Status' value='PV-15-Ambulatory Status'></option>
+                    <option label='PV-16-VIP Indicator' value='PV-16-VIP Indicator'></option>
+                    <option label='PV-17- Admitting Doctor' value='PV-17- Admitting Doctor'></option>
+                    <option label='PV-18-Patient Type' value='PV-18-Patient Type'></option>
+                    <option label='PV-19-Visit Number' value='PV-19-Visit Number'></option>
+                  </select>
+                  <span class="select-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-chevron-down">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <path d="M6 9l6 6l6 -6"></path>
+                    </svg>
+                  </span>
+                </fieldset>
+              </div>
             </form>
             <div class="button-group right">
               <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a>
