--- a/projects/amen/views/mapping/template/index-r1.html
+++ b/projects/amen/views/mapping/template/index-r1.html
@@ -45,12 +45,16 @@
       <section>
         <h2>Edit Active Fields</h2>
         <div class="row cards">
-          <div class="card mapping-group">
-            <h3 class="visuallyhidden">Control Fields</h3>
-            <form id="yale-medical-center-fields">
-              <div class="group">
-                
-              </div>
+          <div class="card">
+            <h3>Control Fields</h3>
+            <!-- <div class="button-group right">
+              <button class="tertiary">All</button>
+              <button class="tertiary">None</button>
+            </div> -->
+            <form id="">
+              <fieldset class="toggle checklist">
+                <!-- <legend></legend> -->
+              </fieldset>
             </form>
             <div class="button-group right">
               <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a>
