--- a/style/_scss/_buttons.scss
+++ b/style/_scss/_buttons.scss
@@ -254,6 +254,7 @@ html.dark {
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
+  width: 100%;
   padding: $spacing-16 0 0;
 
   button,
