Updated AMEN location and lab result pages

--- a/projects/amen/views/mapping/location/index.html
+++ b/projects/amen/views/mapping/location/index.html
@@ -45,7 +45,7 @@
       <section>
         <h2>Edit Active Fields</h2>
         <div class="row cards">
-          <div class="card mapping-group">
+          <div class="card mapping-group row">
             <h3 class="visuallyhidden">Control Fields</h3>
             <form id="yale-medical-center-location">
               <div class="group">
