Updated AMEN soft load; fixed mapping groups

--- a/projects/amen/style/_scss/_mapping.scss
+++ b/projects/amen/style/_scss/_mapping.scss
@@ -105,6 +105,7 @@
 .card.mapping-group.row {
   form {
     flex-direction: row;
+    align-items: flex-start;
 
     .group {
       display: flex;
