--- a/projects/amen/style/amen.css
+++ b/projects/amen/style/amen.css
@@ -72,8 +72,6 @@ html.dark body {
 }
 
 * {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -97,10 +95,6 @@ a {
   font-weight: 700;
   text-decoration: none;
   color: var(--color--action-light);
-  -webkit-transition: color 0.25s ease 0s;
-  -moz-transition: color 0.25s ease 0s;
-  -ms-transition: color 0.25s ease 0s;
-  -o-transition: color 0.25s ease 0s;
   transition: color 0.25s ease 0s;
 }
 a:hover, a:focus {
@@ -329,10 +323,6 @@ select {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  -webkit-transition: all 0.25s ease 0s;
-  -moz-transition: all 0.25s ease 0s;
-  -ms-transition: all 0.25s ease 0s;
-  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 
@@ -430,10 +420,6 @@ input:placeholder {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  -webkit-transition: all 0.25s ease 0s;
-  -moz-transition: all 0.25s ease 0s;
-  -ms-transition: all 0.25s ease 0s;
-  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 
@@ -500,10 +486,6 @@ input[type=checkbox] + label:before {
   border-radius: var(--border-radius-xs);
   background-color: transparent;
   content: "";
-  -webkit-transition: all 0.25s ease 0s;
-  -moz-transition: all 0.25s ease 0s;
-  -ms-transition: all 0.25s ease 0s;
-  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 input[type=checkbox] + label:after {
@@ -516,10 +498,6 @@ input[type=checkbox] + label:after {
   background-image: url(../assets/icons/ui/check.svg);
   background-size: contain;
   content: none;
-  -webkit-transition: all 0.25s ease 0s;
-  -moz-transition: all 0.25s ease 0s;
-  -ms-transition: all 0.25s ease 0s;
-  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 
@@ -571,10 +549,6 @@ fieldset.radio input[type=radio] + label:before {
   border-radius: 100%;
   background-color: transparent;
   content: "";
-  -webkit-transition: all 0.25s ease 0s;
-  -moz-transition: all 0.25s ease 0s;
-  -ms-transition: all 0.25s ease 0s;
-  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 fieldset.radio input[type=radio] + label:after {
@@ -588,10 +562,6 @@ fieldset.radio input[type=radio] + label:after {
   background-color: var(--color--bg-dark);
   opacity: 0;
   content: "";
-  -webkit-transition: opacity 0.25s ease 0s;
-  -moz-transition: opacity 0.25s ease 0s;
-  -ms-transition: opacity 0.25s ease 0s;
-  -o-transition: opacity 0.25s ease 0s;
   transition: opacity 0.25s ease 0s;
 }
 fieldset.radio input[type=radio]:checked + label:before {
@@ -656,10 +626,6 @@ fieldset.toggle label input[type=checkbox]:after {
   border-radius: 100%;
   background-color: var(--color--border);
   content: "";
-  -webkit-transition: all 0.25s ease 0s;
-  -moz-transition: all 0.25s ease 0s;
-  -ms-transition: all 0.25s ease 0s;
-  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 fieldset.toggle label input[type=checkbox]:checked {
@@ -715,9 +681,6 @@ fieldset.range input[type=range]::-webkit-slider-thumb {
   -moz-appearance: none;
   appearance: none;
   -webkit-transition: all 0.25s ease 0s;
-  -moz-transition: all 0.25s ease 0s;
-  -ms-transition: all 0.25s ease 0s;
-  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 fieldset.range input[type=range]::-moz-range-thumb {
@@ -729,10 +692,7 @@ fieldset.range input[type=range]::-moz-range-thumb {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  -webkit-transition: all 0.25s ease 0s;
   -moz-transition: all 0.25s ease 0s;
-  -ms-transition: all 0.25s ease 0s;
-  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 
@@ -1234,10 +1194,6 @@ html.dark form.color-mode fieldset label input[type=checkbox]:checked:after {
   max-height: 0;
   opacity: 0;
   stroke-width: 2.5;
-  -webkit-transition: all 0.25s ease 0s;
-  -moz-transition: all 0.25s ease 0s;
-  -ms-transition: all 0.25s ease 0s;
-  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 .card ul.options li span.status.invalid {
@@ -1472,27 +1428,15 @@ header {
 }
 
 .headroom {
-  -webkit-transition: all 0.5s ease 0s;
-  -moz-transition: all 0.5s ease 0s;
-  -ms-transition: all 0.5s ease 0s;
-  -o-transition: all 0.5s ease 0s;
   transition: all 0.5s ease 0s;
   will-change: transform;
 }
 
 .headroom--pinned {
-  -webkit-transform: translateY(0);
-  -moz-transform: translateY(0);
-  -ms-transform: translateY(0);
-  -o-transform: translateY(0);
   transform: translateY(0);
 }
 
 .headroom--unpinned {
-  -webkit-transform: translateY(-100vh);
-  -moz-transform: translateY(-100vh);
-  -ms-transform: translateY(-100vh);
-  -o-transform: translateY(-100vh);
   transform: translateY(-100vh);
 }
 
@@ -1566,10 +1510,6 @@ nav ul li:last-of-type {
   top: 0;
   width: auto;
   padding: var(--spacing--16);
-  -webkit-transition: all 0.25s ease 0s;
-  -moz-transition: all 0.25s ease 0s;
-  -ms-transition: all 0.25s ease 0s;
-  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 .drawers .drawer > .card {
@@ -1578,26 +1518,39 @@ nav ul li:last-of-type {
 }
 .drawers .drawer.right {
   right: 0;
-  -webkit-transform: translateX(100vw);
-  -moz-transform: translateX(100vw);
-  -ms-transform: translateX(100vw);
-  -o-transform: translateX(100vw);
   transform: translateX(100vw);
 }
 .drawers .drawer.left {
   left: 0;
-  -webkit-transform: translateX(-100vw);
-  -moz-transform: translateX(-100vw);
-  -ms-transform: translateX(-100vw);
-  -o-transform: translateX(-100vw);
   transform: translateX(-100vw);
 }
 .drawers .drawer.show {
-  -webkit-transform: translateX(0vw);
-  -moz-transform: translateX(0vw);
-  -ms-transform: translateX(0vw);
-  -o-transform: translateX(0vw);
   transform: translateX(0vw);
+}
+
+button[popovertarget].text {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: inherit;
+  color: inherit;
+  background-color: transparent;
+}
+button[popovertarget].text:hover, button[popovertarget].text:focus {
+  color: inherit;
+  background-color: transparent;
+}
+
+[popover] {
+  padding: var(--spacing--16);
+  border: 0;
+  border-radius: var(--border-radius-xs);
+  opacity: 0;
+  transition: opacity 0.25s ease 0s;
+}
+
+[popover]:popover-open {
+  opacity: 1;
 }
 
 button,
@@ -1605,6 +1558,7 @@ button,
 a.button {
   display: inline-flex;
   align-items: center;
+  width: -moz-max-content;
   width: max-content;
   max-width: 100%;
   overflow: hidden;
@@ -1621,10 +1575,6 @@ a.button {
   white-space: nowrap;
   color: var(--color--text-light);
   background-color: var(--color--action-light);
-  -webkit-transition: all 0.25s ease 0s;
-  -moz-transition: all 0.25s ease 0s;
-  -ms-transition: all 0.25s ease 0s;
-  -o-transition: all 0.25s ease 0s;
   transition: all 0.25s ease 0s;
 }
 button:hover, button:focus,
