--- a/style/master.scss
+++ b/style/master.scss
@@ -9,5 +9,6 @@
 @import "_scss/footer";
 @import "_scss/navigation";
 @import "_scss/drawers";
+@import "_scss/popovers";
 @import "_scss/buttons";
 @import "_scss/utilities";
