AMEN localStorage entities

--- a/projects/amen/views/mapping/entities/index.html
+++ b/projects/amen/views/mapping/entities/index.html
@@ -54,17 +54,20 @@
             <form id="yale-medical-center-entities">
               <fieldset class="toggle checklist">
                 <!-- <legend>Entities</legend> -->
-                <label for="yale-medical-center-patient">Patient<input type="checkbox" id="yale-medical-center-patient" class="toggle" name="yale-medical-center-patient" title="Patient" value="Patient" checked></label>
+                <label for="yale-medical-center-patient">Patient<input type="checkbox" id="yale-medical-center-patient" class="toggle" name="yale-medical-center-patient" title="Patient" value="Patient"></label>
                 <label for="yale-medical-center-provider">Provider<input type="checkbox" id="yale-medical-center-provider" class="toggle" name="yale-medical-center-provider" title="Provider" value="Provider"></label>
                 <label for="yale-medical-center-caregiver">Caregiver<input type="checkbox" id="yale-medical-center-caregiver" class="toggle" name="yale-medical-center-caregiver" title="Caregiver" value="Caregiver"></label>
-                <label for="yale-medical-center-location">Location<input type="checkbox" id="yale-medical-center-location" class="toggle" name="yale-medical-center-location" title="Location" value="Location" checked></label>
+                <label for="yale-medical-center-location">Location<input type="checkbox" id="yale-medical-center-location" class="toggle" name="yale-medical-center-location" title="Location" value="Location"></label>
                 <label for="yale-medical-center-caregiver-assignment">Caregiver Assignment<input type="checkbox" id="yale-medical-center-caregiver-assignment" class="toggle" name="yale-medical-center-caregiver-assignment" title="Caregiver Assignment" value="Caregiver Assignment"></label>
                 <label for="yale-medical-center-patient-update">Patient Update<input type="checkbox" id="yale-medical-center-patient-update" class="toggle" name="yale-medical-center-patient-update" title="Patient Update" value="Patient Update"></label>
                 <label for="yale-medical-center-order-request">Order Request<input type="checkbox" id="yale-medical-center-order-request" class="toggle" name="yale-medical-center-order-request" title="Order Request" value="Order Request"></label>
-                <label for="yale-medical-center-lab-request">Lab Request<input type="checkbox" id="yale-medical-center-lab-request" class="toggle" name="yale-medical-center-lab-request" title="Lab Request" value="Lab Request" checked></label>
+                <label for="yale-medical-center-lab-request">Lab Request<input type="checkbox" id="yale-medical-center-lab-request" class="toggle" name="yale-medical-center-lab-request" title="Lab Request" value="Lab Request"></label>
                 <label for="yale-medical-center-nurse-call">Nurse Call<input type="checkbox" id="yale-medical-center-nurse-call" class="toggle" name="yale-medical-center-nurse-call" title="Nurse Call" value="Nurse Call"></label>
                 <label for="yale-medical-center-patient-monitor">Patient Monitor<input type="checkbox" id="yale-medical-center-patient-monitor" class="toggle" name="yale-medical-center-patient-monitor" title="Patient Monitor" value="Patient Monitor"></label>
-                <label for="yale-medical-center-action-response">Action Response<input type="checkbox" id="yale-medical-center-action-response" class="toggle" name="yale-medical-center-action-response" title="Action Response" value="Action Response"></label>
+                <label for="yale-medical-center-response">Response<input type="checkbox" id="yale-medical-center-response" class="toggle" name="yale-medical-center-response" title="Response" value="Response"></label>
+                <label for="yale-medical-center-availability">Availability<input type="checkbox" id="yale-medical-center-availability" class="toggle" name="yale-medical-center-availability" title="Availability" value="Availability"></label>
+                <label for="yale-medical-center-delivery">Delivery<input type="checkbox" id="yale-medical-center-delivery" class="toggle" name="yale-medical-center-delivery" title="Delivery" value="Delivery"></label>
+                <label for="yale-medical-center-presence">Presence<input type="checkbox" id="yale-medical-center-presence" class="toggle" name="yale-medical-center-presence" title="Presence" value="Presence"></label>
               </fieldset>
             </form>
             <div class="button-group right">
