--- a/projects/amen/views/mapping/index.html
+++ b/projects/amen/views/mapping/index.html
@@ -48,8 +48,8 @@
           <!-- <button class="primary">Add Entities</button> -->
           <a href="views/mapping/entities/index.html" class="button primary">Add Entities</a>
         </div>
-        <div class="row cards align-start">
-          <div class="card column-12">
+        <div class="row cards">
+          <div id="yale-medical-center-patient-entity" class="card entity column-12">
             <h4>Patient<span class="utility"><a href="views/mapping/patient/index.html" class="button tertiary">Edit Fields</a></span></h4>
             <ul class="mapping">
               <li>
@@ -57,17 +57,29 @@
                 <span class="element">Element</span>
                 <span class="preview">Preview</span>
               </li>
+            </ul>
+          </div>
+          <div id="yale-medical-center-provider-entity" class="card entity column-12">
+            <h4>Provider<span class="utility"><a href="views/mapping/provider/index.html" class="button tertiary">Edit Fields</a></span></h4>
+            <ul class="mapping">
               <li>
-                <span class="field">Patient ID</span>
-                <span class="element"><code>PID.2</code>+<code>PID.3</code></span>
-                <span class="preview">E00000329M000000350</span>
-              </li>
-              <li>
-                <span class="field">First Name</span>
-                <span class="element"><code>PID-5.2</code></span>
-                <span class="preview">TOM</span>
+                <span class="field">Field</span>
+                <span class="element">Element</span>
+                <span class="preview">Preview</span>
               </li>
             </ul>
+          </div>
+          <div id="yale-medical-center-caregiver-entity" class="card entity column-12">
+            <h4>Caregiver<span class="utility"><a href="views/mapping/caregiver/index.html" class="button tertiary">Edit Fields</a></span></h4>
+            <ul class="mapping">
+              <li>
+                <span class="field">Field</span>
+                <span class="element">Element</span>
+                <span class="preview">Preview</span>
+              </li>
+            </ul>
+          </div>
+          <div id="yale-medical-center-location-entity" class="card entity column-12">
             <h4>Location<span class="utility"><a href="views/mapping/location/index.html" class="button tertiary">Edit Fields</a></span></h4>
             <ul class="mapping">
               <li>
@@ -75,38 +87,105 @@
                 <span class="element">Element</span>
                 <span class="preview">Preview</span>
               </li>
-              <li>
-                <span class="field">Description</span>
-                <span class="element"><code>PV1[1].3</code></span>
-                <span class="preview">ICU^101^A</span>
-              </li>
             </ul>
-            <h4>Lab Result<span class="utility"><a href="views/mapping/lab-result/index.html" class="button tertiary">Edit Fields</a></span></h4>
+          </div>
+          <div id="yale-medical-center-caregiver-assignment-entity" class="card entity column-12">
+            <h4>Caregiver Assignment<span class="utility"><a href="views/mapping/caregiver-assignment/index.html" class="button tertiary">Edit Fields</a></span></h4>
             <ul class="mapping">
               <li>
                 <span class="field">Field</span>
                 <span class="element">Element</span>
                 <span class="preview">Preview</span>
               </li>
+            </ul>
+          </div>
+          <div id="yale-medical-center-patient-update-entity" class="card entity column-12">
+            <h4>Patient Update<span class="utility"><a href="views/mapping/patient-update/index.html" class="button tertiary">Edit Fields</a></span></h4>
+            <ul class="mapping">
               <li>
-                <span class="field">Value Type</span>
-                <span class="element"><code>OBX[1]3.2</code></span>
-                <span class="preview">HEPARIN</span>
+                <span class="field">Field</span>
+                <span class="element">Element</span>
+                <span class="preview">Preview</span>
               </li>
+            </ul>
+          </div>
+          <div id="yale-medical-center-order-request-entity" class="card entity column-12">
+            <h4>Order Request<span class="utility"><a href="views/mapping/order-request/index.html" class="button tertiary">Edit Fields</a></span></h4>
+            <ul class="mapping">
               <li>
-                <span class="field">Units</span>
-                <span class="element"><code>OBX[1].6</code></span>
-                <span class="preview">SECONDS</span>
+                <span class="field">Field</span>
+                <span class="element">Element</span>
+                <span class="preview">Preview</span>
               </li>
+            </ul>
+          </div>
+          <div id="yale-medical-center-lab-request-entity" class="card entity column-12">
+            <h4>Lab Request<span class="utility"><a href="views/mapping/lab-request/index.html" class="button tertiary">Edit Fields</a></span></h4>
+            <ul class="mapping">
               <li>
-                <span class="field">References Range</span>
-                <span class="element"><code>OBX[1].7</code></span>
-                <span class="preview">9.6-11.2</span>
+                <span class="field">Field</span>
+                <span class="element">Element</span>
+                <span class="preview">Preview</span>
               </li>
+            </ul>
+          </div>
+          <div id="yale-medical-center-nurse-call-entity" class="card entity column-12">
+            <h4>Nurse Call<span class="utility"><a href="views/mapping/nurse-call/index.html" class="button tertiary">Edit Fields</a></span></h4>
+            <ul class="mapping">
               <li>
-                <span class="field">Observation Value</span>
-                <span class="element"><code>OBX[1].5</code></span>
-                <span class="preview">12</span>
+                <span class="field">Field</span>
+                <span class="element">Element</span>
+                <span class="preview">Preview</span>
+              </li>
+            </ul>
+          </div>
+          <div id="yale-medical-center-patient-monitor-entity" class="card entity column-12">
+            <h4>Patient Monitor<span class="utility"><a href="views/mapping/patient-monitor/index.html" class="button tertiary">Edit Fields</a></span></h4>
+            <ul class="mapping">
+              <li>
+                <span class="field">Field</span>
+                <span class="element">Element</span>
+                <span class="preview">Preview</span>
+              </li>
+            </ul>
+          </div>
+          <div id="yale-medical-center-response-entity" class="card entity column-12">
+            <h4>Response<span class="utility"><a href="views/mapping/response/index.html" class="button tertiary">Edit Fields</a></span></h4>
+            <ul class="mapping">
+              <li>
+                <span class="field">Field</span>
+                <span class="element">Element</span>
+                <span class="preview">Preview</span>
+              </li>
+            </ul>
+          </div>
+          <div id="yale-medical-center-availability-entity" class="card entity column-12">
+            <h4>Availability<span class="utility"><a href="views/mapping/availability/index.html" class="button tertiary">Edit Fields</a></span></h4>
+            <ul class="mapping">
+              <li>
+                <span class="field">Field</span>
+                <span class="element">Element</span>
+                <span class="preview">Preview</span>
+              </li>
+            </ul>
+          </div>
+          <div id="yale-medical-center-delivery-entity" class="card entity column-12">
+            <h4>Delivery<span class="utility"><a href="views/mapping/delivery/index.html" class="button tertiary">Edit Fields</a></span></h4>
+            <ul class="mapping">
+              <li>
+                <span class="field">Field</span>
+                <span class="element">Element</span>
+                <span class="preview">Preview</span>
+              </li>
+            </ul>
+          </div>
+          <div id="yale-medical-center-presence-entity" class="card entity column-12">
+            <h4>Presence<span class="utility"><a href="views/mapping/presence/index.html" class="button tertiary">Edit Fields</a></span></h4>
+            <ul class="mapping">
+              <li>
+                <span class="field">Field</span>
+                <span class="element">Element</span>
+                <span class="preview">Preview</span>
               </li>
             </ul>
           </div>
