AMEN js updates
Need to figure out how to best utilize and control localStorage

--- a/projects/amen/style/_scss/_mapping.scss
+++ b/projects/amen/style/_scss/_mapping.scss
@@ -101,6 +101,21 @@
 }
 
 
+// DASHBOARD ENTITIES
+.card ul.options li {
+  display: none;
+  max-height: 0;
+  opacity: 0;
+  @include transition(all);
+
+  &.show {
+    display: flex;
+    max-height: 100vh;
+    opacity: 1;
+  }
+}
+
+
 // ENTITY CARDS
 .card.entity {
   display: none;
