--- a/projects/amen/views/mapping/index.html
+++ b/projects/amen/views/mapping/index.html
@@ -119,8 +119,8 @@
               </li>
             </ul>
           </div>
-          <div id="yale-medical-center-lab-request-entity" class="card entity column-12">
-            <h4>Lab Request<span class="utility"><a href="views/mapping/lab-request/index.html" class="button tertiary">Edit Fields</a></span></h4>
+          <div id="yale-medical-center-lab-result-entity" class="card entity column-12">
+            <h4>Lab Result<span class="utility"><a href="views/mapping/lab-result/index.html" class="button tertiary">Edit Fields</a></span></h4>
             <ul class="mapping">
               <li>
                 <span class="field">Field</span>
