--- a/projects/amen/style/amen.css
+++ b/projects/amen/style/amen.css
@@ -1932,6 +1932,18 @@ h4 span.utility .button.tertiary {
     content: "";
   }
 }
+.card ul.options li {
+  display: none;
+  max-height: 0;
+  opacity: 0;
+  transition: all 0.25s ease 0s;
+}
+.card ul.options li.show {
+  display: flex;
+  max-height: 100vh;
+  opacity: 1;
+}
+
 .card.entity {
   display: none;
   max-height: 0;
